force-app/main/default/objects/Stripe_Sync__mdt/Stripe_Sync__mdt.object-meta.xml
<CustomObject>
    <description>Setting to be able to turn inbound and outbound sync on/off</description>
    <label>Stripe Sync</label>
    <pluralLabel>Stripe Syncs</pluralLabel>
</CustomObject>