force-app/main/default/objects/Stripe_Sync__mdt/fields/Contacts_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contacts Stripe to Salesforce</description>
    <label>Contacts_Inbound</label>
    <type>Checkbox</type>
</CustomField>