force-app/main/default/objects/Stripe_Sync__mdt/fields/Contacts_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contacts Salesforce to Stripe</description>
    <label>Contacts_Outbound</label>
    <type>Checkbox</type>
</CustomField>