force-app/main/default/objects/Stripe_Sync__mdt/fields/Subscriptions_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscriptions Stripe to Salesforce</description>
    <label>Subscriptions_Inbound</label>
    <type>Checkbox</type>
</CustomField>