force-app/main/default/objects/Stripe_Sync__mdt/fields/Subscriptions_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscriptions Salesforce to Stripe</description>
    <label>Subscriptions_Outbound</label>
    <type>Checkbox</type>
</CustomField>